# SnackTrack-V0

./: .env.example  .gitignore  ENV.md  README.md  backend-start-error.txt  backend-start-output.txt  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/backend/: Dockerfile  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/src/: app.ts  index.ts
apps/backend/src/config/: constants.ts  database.ts  env.ts  queue.ts  redis.ts  sentry.ts  supabase.ts
apps/backend/tests/: database.test.ts  health.test.ts  meal-log.test.ts  nutrition.test.ts  user.test.ts
apps/frontend/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
apps/ml-service/: Dockerfile  pyproject.toml
apps/ml-service/app/: config.py  db.py  main.py
apps/ml-service/app/models/: schemas.py
apps/ml-service/app/recommender/: collaborative.py  content_based.py  hybrid.py  knowledge_based.py  rnn.py  vae.py
apps/ml-service/app/routers/: recommend.py  train.py
apps/ml-service/notebooks/: 00_download_datasets.ipynb  01_eda_and_data_quality.ipynb  02_content_based_analysis.ipynb  03_collaborative_filtering_analysis.ipynb  04_vae_training.ipynb  05_rnn_training.ipynb  06_hybrid_evaluation.ipynb
apps/ml-service/notebooks/utils/: __init__.py  data_loader.py  dataset_downloader.py  db_connect.py  plot_helpers.py  weight_io.py
apps/ml-service/tests/: test_recommend.py  test_train.py
(+83 files in other folders)
